# Nokia-PK-2025

./: .gitignore  README.md
.github/workflows/: ccpp.yml
docs/: ProjectAndSoftwareRequirements.docx
lectures/01.GitUml/: cmake.txt
lectures/05.CppStdContainersAlgorithmsRanges/: CMakeLists.txt  example1.cpp  example2.cpp
lectures/08.MultiThreading/Atomics/: CMakeLists.txt  main.cpp
lectures/08.MultiThreading/ConditionVariables/: CMakeLists.txt  main.cpp
lectures/08.MultiThreading/Futures/: CMakeLists.txt  main.cpp
lectures/08.MultiThreading/Mutexes/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  internal_commands.cmake
src/COMMON/Logger/: ILogger.hpp  Logger.cpp  PrefixedLogger.cpp  PrefixedLogger.hpp
src/COMMON/Messages/: BtsId.hpp  PhoneNumber.hpp
src/UE/: main.cpp
src/UE/Application/: Application.cpp  Application.hpp  CMakeLists.txt  Context.hpp  IEventsHandler.hpp
src/UE/Application/Ports/: BtsPort.cpp  BtsPort.hpp  IBtsPort.hpp  IUserPort.hpp  TimerPort.cpp  TimerPort.hpp  UserPort.cpp  UserPort.hpp
src/UE/Application/SMS/: SMS.cpp  SMS.hpp  SMSDB.cpp  SMSDB.hpp
src/UE/Application/States/: BaseState.cpp  BaseState.hpp  CallingState.cpp  CallingState.hpp  ComposeSmsState.cpp  ComposeSmsState.hpp  ComposingSmsState.cpp  ComposingSmsState.hpp  ConnectedState.cpp  ConnectedState.hpp  ConnectingState.cpp  ConnectingState.hpp  DialState.cpp  DialState.hpp  NotConnectedState.cpp  NotConnectedState.hpp  TalkingState.cpp  TalkingState.hpp  ViewSMSListState.cpp  ViewSMSListState.hpp  ViewSingleSmsState.cpp  ViewSingleSmsState.hpp  ViewSmsState.cpp  ViewSmsState.hpp
src/UE/ApplicationEnvironment/: IUeGui.hpp
src/UE/ApplicationEnvironment/UeGui/: ICallMode.hpp  ISmsViewMode.hpp
src/UE/QtApplicationEnvironment/GUI/: QtCallMode.cpp  QtCallMode.hpp  QtSelectionListMode.cpp  QtUeGui.cpp  QtUeGui.hpp
src/UE/Tests/Application/: ApplicationTestSuite.cpp  CMakeLists.txt
src/UE/Tests/Application/Mocks/: IBtsPortMock.hpp  IEventsHandlerMock.hpp  IUeGuiMock.hpp  IUserPortMock.hpp
src/UE/Tests/Application/Ports/: BtsPortTestSuite.cpp  UserPortTestSuite.cpp
src/UE/Tests/Application/SMS/: SMSDBTestSuite.cpp  SMSRegressionTestSuite.cpp  SMSTestSuite.cpp
src/UE/Tests/Application/States/: ViewSMSListStateTestSuite.cpp  ViewSingleSmsStateTestSuite.cpp
